--- a/web/templates/performance_data.html
+++ b/web/templates/performance_data.html
@@ -108,12 +108,10 @@ function load_graph(){
     <a href="/status/host/{{ service['host']['id'] }}" class="btn btn-primary host_back_btn"> Host Status</a>
   </div>
 
-  <div class="accordion mt-3" id="graph_accordian">
-
+  <div class="mt-3">
     {% if 'perf_data' in service %}
-    {% set first_graph = service['perf_data'][0]['id'] %}
     {% for p in service['perf_data']: %}
-    <div class="card">
+    <div class="card mt-2">
       <div class="card-header" id="heading_{{p['id']}}">
         <h5 class="mb-0">
             Data Point: {{ p['label'] }}
