--- a/web/templates/services.html
+++ b/web/templates/services.html
@@ -9,6 +9,7 @@ function load_status(){
     // setup row objects
     var tr = $('<tr>');
     var td = $('<td>');
+    var div = $('<div>');
 
     //clear existing data
     table.empty();
@@ -16,15 +17,51 @@ function load_status(){
     data.services.forEach(function(s){
       row = tr.clone();
 
+      text_highlight = 'text-secondary';
       if(s.return_code == 0){
-        row.append(td.clone().text(s.name).addClass('text-success'));
+        text_highlight = 'text-success';
       }
       else if(s.return_code == 1){
-        row.append(td.clone().text(s.name).addClass('text-warning'));
+        text_highlight = 'text-warning';
       }
-      else {
-        row.append(td.clone().text(s.name).addClass('text-danger'));
+      else if(s.return_code == 2){
+        text_highlight = 'text-danger';
       }
+
+      //create a row for the service name
+      col1 = $('<div>').text(s.name);
+      col1.attr('class', 'col-sm-12 ' + text_highlight);
+
+      row1 = $('<div>').append(col1);
+      row1.attr('class', 'row');
+
+      //create a row for the links (if any)
+      link1 = '';
+      if(s.hasOwnProperty('service_url'))
+      {
+        link1 = $('<a>');
+        link1.attr('href', s.service_url);
+        link1.attr('target', "_blank");
+        link1.attr('class', 'mdi mdi-launch icon-sm icon-inline');
+      }
+
+      link2 = '';
+      if(s.hasOwnProperty('perf_data'))
+      {
+        link2 = $('<a>');
+        link2.attr('href', '/perf_data/' + s.id);
+        link2.attr('class', 'mdi mdi-chart-areaspline-variant icon-sm icon-inline');
+      }
+
+      col2 = $('<div>').append(link1).append(link2);
+      col2.attr('class', 'col-sm-12 text-left');
+
+      row2 = $('<div>').append(col2);
+      row2.attr('class', 'row align-items-end mt-2');
+
+      row.append(td.clone().append(row1).append(row2));
+
+
 
       // link for the details
       host = $('<a>').html(s.host.name);
