--- a/web/templates/services.html
+++ b/web/templates/services.html
@@ -2,6 +2,7 @@
 {% block header %}
 <script src="/static/js/countdown.js"></script>
 <script type="text/javascript">
+var countdown = new UpdateCountdown();
 
 function load_status(){
   $.ajax({type: 'GET', url: '{{ url }}', success: function(data, status, request){
@@ -81,7 +82,7 @@ function load_status(){
 
     });
 
-    reset_countdown();
+    countdown.reset_countdown();
   }});
 
 }
@@ -116,5 +117,5 @@ function load_status(){
 {% block onload_scripts %}
 load_status();
 setInterval(load_status, 15000);
-start_countdown();
+countdown.start_countdown();
 {% endblock %}
