--- a/web/templates/host_status.html
+++ b/web/templates/host_status.html
@@ -5,7 +5,7 @@
 <script src="/static/js/highlight.min.js"></script>
 <script src="/static/js/countdown.js"></script>
 <script type="text/javascript">
-var countdown = new UpdateCountdown();
+var countdown = new UpdateCountdown("last_updated");
 var STATUS_COLORS = ['text-success', 'text-warning', 'text-danger', 'text-secondary'];
 var OVERALL_STATUS = ['OK', 'Warning', 'Critical', 'Unknown'];
 var TAGS = {{ tags | safe }};
